fix width on iOS

--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ div#indicator {
 }
 
 input#word {
-	width: 80%;
+	width: 70%;
 	font-size: 20px;
 	padding: 4px 8px;
 	outline: none;
